Great War Redux

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -208,3 +208,102 @@ ww1_germanygcpincreasetooltip2:0 "     -§cGCP§! gains §Y2§!"
 GER_agricultural_incentives:0 "Agricultural Incentives"
 GER_new_major_railway_connection:0 "New Major Railway Connection"
 GER_german_migration:0 "German Migration"
+
+#Focuses
+
+#Starting Political Tree
+GER_wilhelmine_germany:0 "Wilhelmine Germany"
+GER_freie_volksbuhne:0 "Freie Volksbuhne"
+GER_appoint_solf_as_colonial_secretary:0 "Appoint Solf as Colonial Secretary"
+GER_productional_efficiency:0 "Productional Efficiency"
+GER_nationalising_colonial_diamond_deposists:0 "Nationalising Colonial Diamond Desposists"
+GER_deal_with_the_sokehs_rebellion:0 "Deal with the Sokehs Rebbelion"
+GER_organise_german_settlement:0 "Organise German Settlement"
+GER_colonial_cooperation_with_belgian_companies:0 "Colonial Cooperation with Belgian Companies"
+GER_finance_the_east_african_railway_project:0 "Finance the East African Railway Project"
+GER_pass_the_job_placement_act:0 "Pass the Job Placement Act"
+GER_conduct_a_national_census:0 "Conduct a National Census"
+GER_hollwegs_push_for_a_national_pension:0 "Hollweg's push for a National Pension"
+GER_hand_out_agricultural_incentives:0 "Hand out Agricultural Incentives"
+GER_the_reich_to_bavaria_railway:0 "The Reich-Bavaria Railway"
+GER_a_constitution_for_alsace:0 "A Constitution for Alsace"
+GER_german_peoples_get_german_pensions:0 "German Peoples get German Pensions"
+GER_memories_of_1871:0 "Memories of 1871"
+GER_treading_the_centre_line:0 "Treading the Centre Line"
+GER_the_growing_pan_german_influence:0 "The Growing Pan-German Influence"
+GER_prussian_militarism_at_its_finest:0 "Prussian Militarism at it's Finest"
+GER_campaining_for_the_german_identity:0 "Campaining for the German Identity"
+GER_adressing_the_matter_of_german_identity:0 "Adressing the Matter of German Identity"
+GER_an_empire_of_many_peoples:0 "An Empire of Many Peoples..."
+GER_but_a_german_empire_first:0 "But a German Empire First!"
+
+#Pre-War Naval Tree
+GER_the_matter_of_the_navy:0 "The Matter of the Navy"
+GER_flirt_with_britain:0 "Boat's Won't Win the War"
+GER_a_grand_navy:0 "Tirpitz's Grand Navy"
+GER_common_interests:0 "Utilising the Kaiser's Common Interests"
+GER_aftermath_of_the_haldane_mission:0 "Aftermath of the Haldane Mission"
+GER_german_pride:0 "Remberance of German Pride"
+GER_propose_immediate_rustungswende:0 "Propose Immediate Rustungswende"
+GER_krupp_contracts:0 "Vickers-Krupp Cooperation"
+GER_expansion_of_shipyards:0 "Pass the Fith Naval Expansion Act"
+GER_utilise_the_navy_league:0 "Utilise the Navy Leauge"
+GER_demand_angola:0 "The Unfortunate Matter of Portugal"
+GER_sell_ships_to_russia:0 "Selling Ships to Russia"
+GER_bigger_guns:0 "Bigger Guns, Bigger Hulls, Bigger Ships"
+GER_the_influence_of_sea_power:0 "The Influence of Sea Power"
+GER_u_nineteen:0 "Develop the U-19"
+GER_the_fleet_in_being:0 "A Fleet in Being"
+GER_a_smarter_navy:0 "Building a Smarter Navy"
+GER_full_steam_ahead:0 "Full Steam Ahead"
+GER_equip_anti_air:0 "Equip Anti-Air"
+GER_vulcan_contracts:0 "Vulcan Contracts"
+GER_zepplin_reconnaissance:0 "Zepplin Reconnaissance"
+GER_invest_into_naval_bombers:0 "Invest into Naval Bombers"
+GER_tirpitz_grand_fleet:0 "Tipitz's Might Fleet Rearlised"
+GER_v_thirty_production:0 "Mass Produce the V-30"
+
+#Pre-War Military Tree
+GER_the_1912_military_conference:0 "The 1912 Military Conference"
+GER_enact_rustungswende:0 "Enact Rustungswende"
+GER_side_with_the_war_ministry:0 "Side with the War Ministry"
+GER_side_with_the_general_staff:0 "Side with the General Staff"
+GER_state_munitions:0 "State Munitions"
+GER_qualitative_strength:0 "Qualitative Strength"
+GER_expanding_the_deutsche_luftstreitkrafte:0 "Expanding the Duetsche Luftsreitkrafte"
+GER_wealth_tax_laws:0 "Wealth Tax Laws"
+GER_introduce_new_tariff_laws:0 "Introduce New Tariff Laws"
+GER_to_be_home_by_christmas:0 "To be Home by Christmas"
+GER_fortify_the_russian_border:0 "Fortify the Russian Border"
+GER_propose_the_first_military_expansion_law:0 "Propose the First Military Expansion Law"
+GER_abandon_the_great_ostaufsmarch:0 "Abandon the Great Ostaufsmarch"
+GER_create_the_first_air_corps:0 "Create the First Air Corps"
+GER_enacting_the_second_military_law:0 "Enacting the Second Military Law"
+
+#War Time Tree
+GER_establish_the_general_headquarters:0 "Establish the General Headquarters"
+GER_zental_abteilung:0 "Zental Abteilung"
+GER_operationsabteilung:0 "Operationsabteilung"
+GER_politische_abteilung:0 "Politische Abteilung"
+GER_advance_germania:0 "Advance Germania"
+GER_the_front_stalls:0 "The Front Stalls..."
+GER_introduce_rationing_measures:0 "Introduce Rationing Measures"
+GER_financing_the_war_economy:0 "Financing the War Economy"
+GER_collaborating_with_trade_unions:0 "Collaborating with Trade Unions"
+GER_revived_anti_socialist_laws:0 "Revived Anti-Socialist Laws"
+GER_nachrichtenabteilung:0 "Nachrichtenabteilung"
+GER_a_great_mobilistation_of_moral:0 "A Great Mobilisation of Moral"
+GER_bulletins_on_the_front:0 "Bulletins on the Front"
+GER_regulating_the_war_economy:0 "Regulating the War Economy"
+GER_totaler_krieg:0 "Totaler Krieg"
+GER_surpress_the_peace_movements:0 "Surpress the Peace Movements"
+GER_judenzahlung:0 "Judenzahlung"
+GER_expanding_abteilung_iiib_powers:0 "Expanding Abteilung IIIb's Powers"
+GER_short_term_mass_mobilisation:0 "Short Term Mass Mobilisation"
+GER_ensure_letters_get_home:0 "Ensure Letters get Home"
+GER_conscripting_the_poles_and_danes:0 "Conscripting the Poles and Danes"
+GER_the_lindenburg_program:0 "The Lindenburg Program"
+GER_sending_disenters_to_the_front:0 "Sending Disenters to the Front"
+GER_establishing_the_foreign_armies:0 "Establishing the Foreign Armies"
+GER_blitzproduktion:0 "Blitzproduktion"
+GER_victory_economics:0 "Victory Economics"
