GER Army Tree Icons UPDATE

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -195,12 +195,12 @@ GER_wilhelmine_germany:0 "Wilhelmine Germany"
 GER_freie_volksbuhne:0 "Freie Volksbuhne"
 GER_appoint_solf_as_colonial_secretary:0 "Appoint Solf as Colonial Secretary"
 GER_productional_efficiency:0 "Productional Efficiency"
-GER_nationalising_colonial_diamond_deposists:0 "Nationalising Colonial Diamond Desposists"
+GER_nationalising_colonial_diamond_deposists:0 "Nationalise Colonial Diamond Desposists"
 GER_deal_with_the_sokehs_rebellion:0 "Deal with the Sokehs Rebbelion"
 GER_organise_german_settlement:0 "Organise German Settlement"
 GER_colonial_cooperation_with_belgian_companies:0 "Colonial Cooperation with Belgian Companies"
 GER_finance_the_east_african_railway_project:0 "Finance the East African Railway Project"
-GER_pass_the_job_placement_act:0 "Pass the Job Placement Act"
+GER_pass_the_job_placement_act:0 "Job Placement Act"
 GER_conduct_a_national_census:0 "Conduct a National Census"
 GER_hollwegs_push_for_a_national_pension:0 "Hollweg's push for a National Pension"
 GER_hand_out_agricultural_incentives:0 "Hand out Agricultural Incentives"
@@ -214,7 +214,7 @@ GER_prussian_militarism_at_its_finest:0 "Prussian Militarism at it's Finest"
 GER_campaining_for_the_german_identity:0 "Campaining for the German Identity"
 GER_adressing_the_matter_of_german_identity:0 "Adressing the Matter of German Identity"
 GER_an_empire_of_many_peoples:0 "An Empire of Many Peoples..."
-GER_but_a_german_empire_first:0 "But a German Empire First!"
+GER_but_a_german_empire_first:0 "... But a German One First!"
 
 #Pre-War Naval Tree
 GER_the_matter_of_the_navy:0 "The Matter of the Navy"
@@ -244,20 +244,20 @@ GER_v_thirty_production:0 "Mass Produce the V-30"
 
 #Pre-War Military Tree
 GER_the_1912_military_conference:0 "The 1912 Military Conference"
-GER_enact_rustungswende:0 "Enact Rustungswende"
+GER_enact_rustungswende:0 "Rustungswende"
 GER_side_with_the_war_ministry:0 "Side with the War Ministry"
 GER_side_with_the_general_staff:0 "Side with the General Staff"
 GER_state_munitions:0 "State Munitions"
 GER_qualitative_strength:0 "Qualitative Strength"
-GER_expanding_the_deutsche_luftstreitkrafte:0 "Expanding the Duetsche Luftsreitkrafte"
+GER_expanding_the_deutsche_luftstreitkrafte:0 "Expand the Duetsche Luftsreitkrafte"
 GER_wealth_tax_laws:0 "Wealth Tax Laws"
-GER_introduce_new_tariff_laws:0 "Introduce New Tariff Laws"
+GER_introduce_new_tariff_laws:0 "New Tariff Laws"
 GER_to_be_home_by_christmas:0 "To be Home by Christmas"
 GER_fortify_the_russian_border:0 "Fortify the Russian Border"
-GER_propose_the_first_military_expansion_law:0 "Propose the First Military Expansion Law"
+GER_propose_the_first_military_expansion_law:0 "First Military Expansion Law"
 GER_abandon_the_great_ostaufsmarch:0 "Abandon the Great Ostaufsmarch"
-GER_create_the_first_air_corps:0 "Create the First Air Corps"
-GER_enacting_the_second_military_law:0 "Enacting the Second Military Law"
+GER_create_the_first_air_corps:0 "Form the First Air Corps"
+GER_enacting_the_second_military_law:0 "Second Military Law"
 
 #War Time Tree
 GER_establish_the_general_headquarters:0 "Establish the General Headquarters"
