--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -227,19 +227,19 @@ GER_propose_immediate_rustungswende:0 "Propose Immediate Rustungswende"
 GER_krupp_contracts:0 "Vickers-Krupp Cooperation"
 GER_expansion_of_shipyards:0 "Pass the Fith Naval Expansion Act"
 GER_utilise_the_navy_league:0 "Utilise the Navy Leauge"
-GER_demand_angola:0 "The Unfortunate Matter of Portugal"
+GER_demand_angola:0 "Tackle Portugal's ''Debt''"
 GER_sell_ships_to_russia:0 "Selling Ships to Russia"
 GER_bigger_guns:0 "Bigger Guns, Bigger Hulls, Bigger Ships"
 GER_the_influence_of_sea_power:0 "The Influence of Sea Power"
 GER_u_nineteen:0 "Develop the U-19"
-GER_the_fleet_in_being:0 "A Fleet in Being"
+GER_the_fleet_in_being:0 "Fleet in Being"
 GER_a_smarter_navy:0 "Building a Smarter Navy"
 GER_full_steam_ahead:0 "Full Steam Ahead"
 GER_equip_anti_air:0 "Equip Anti-Air"
 GER_vulcan_contracts:0 "Vulcan Contracts"
 GER_zepplin_reconnaissance:0 "Zepplin Reconnaissance"
 GER_invest_into_naval_bombers:0 "Invest into Naval Bombers"
-GER_tirpitz_grand_fleet:0 "Tipitz's Might Fleet Rearlised"
+GER_tirpitz_grand_fleet:0 "Tirpitz's Grand Fleet"
 GER_v_thirty_production:0 "Mass Produce the V-30"
 
 #Pre-War Military Tree
