--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5035,6 +5035,7 @@ ROM_king_carols_reign:0 "King Carols Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, had lead us well so far. With his great wisdom, Romania has gone from a rumpt puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
+ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 #events 
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
@@ -5098,6 +5099,19 @@ ww1_romania.6.b:0 "Lets try to soothe his fears, we need his support on this one
 ww1_romania.7.t:0 "The Brătianu Land Reform Bill - The Bill Passes!"
 ww1_romania.7.d:0 "While it was harder then expected, the recent land reform bill proposed to parliment has passed! King Carol as well as the general Romania populace have been worried as of late about the liberals competency in governance, and with this major bill, their fears should be soothed. While there is still progress to do, this bill is a pretty large step foward after a series of very minor reforms in the past year. "
 ww1_romania.7.a:0 "Great news for us!"
+ww1_auh.214.t:0 "Romania asks Bukovina for the alliance"
+ww1_auh.214.a:0 "Yes, of course."
+ww1_auh.214.b:0 "ask Germany"
+ww1_auh.215.t:0 "Germany asks to create a puppet in Poland"
+ww1_auh.215.a:0 "No"
+ww1_auh.215.b:0 "Yes"
+ww1_poland.24.t:0 "We're giving a piece of industry to Austria"
+ww1_poland.24.a:0 "Sadly"
+ww1_germany.173.t:0 "Austria is asking for help"
+ww1_germany.173.a:0 "to offer them interests in Poland."
+ww1_germany.173.b:0 "No"
+ww1_romania.19.t:0 "They declined"
+ww1_romania.19.a:0 "OK"
 #decision
 king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
