--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2780,6 +2780,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  POL_Ursus:0 "Ursus"
  POL_stocznia_gdansk:0 "Stocznia Gdańsk"
  POL_idea_last_resort:0 "The Last Resort"
+ POL_industry:0 "Industry in Austria"
  
  #Hungary
  HUN_hungarian_revanchism:0 "Habsburg Revanchism"
