support from germany focus

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5036,6 +5036,7 @@ ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, 
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
+ROM_support_from_germany:0 "Support from Germany"
 #events 
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
