GER War Time Tree UPDATE

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -265,24 +265,24 @@ GER_zental_abteilung:0 "Zental Abteilung"
 GER_operationsabteilung:0 "Operationsabteilung"
 GER_politische_abteilung:0 "Politische Abteilung"
 GER_advance_germania:0 "Advance Germania"
-GER_the_front_stalls:0 "The Front Stalls..."
+GER_the_front_stalls:0 "The Front Stalls"
 GER_introduce_rationing_measures:0 "Introduce Rationing Measures"
 GER_financing_the_war_economy:0 "Financing the War Economy"
 GER_collaborating_with_trade_unions:0 "Collaborating with Trade Unions"
-GER_revived_anti_socialist_laws:0 "Revived Anti-Socialist Laws"
+GER_revived_anti_socialist_laws:0 "Revive Anti-Socialist Laws"
 GER_nachrichtenabteilung:0 "Nachrichtenabteilung"
 GER_a_great_mobilistation_of_moral:0 "A Great Mobilisation of Moral"
 GER_bulletins_on_the_front:0 "Bulletins on the Front"
-GER_regulating_the_war_economy:0 "Regulating the War Economy"
+GER_regulating_the_war_economy:0 "Regulate the War Economy"
 GER_totaler_krieg:0 "Totaler Krieg"
 GER_surpress_the_peace_movements:0 "Surpress the Peace Movements"
 GER_judenzahlung:0 "Judenzahlung"
-GER_expanding_abteilung_iiib_powers:0 "Expanding Abteilung IIIb's Powers"
+GER_expanding_abteilung_iiib_powers:0 "Expand Abteilung IIIb's Powers"
 GER_short_term_mass_mobilisation:0 "Short Term Mass Mobilisation"
 GER_ensure_letters_get_home:0 "Ensure Letters get Home"
-GER_conscripting_the_poles_and_danes:0 "Conscripting the Poles and Danes"
+GER_conscripting_the_poles_and_danes:0 "Conscripting the Poles and the Danes"
 GER_the_lindenburg_program:0 "The Lindenburg Program"
-GER_sending_disenters_to_the_front:0 "Sending Disenters to the Front"
-GER_establishing_the_foreign_armies:0 "Establishing the Foreign Armies"
+GER_sending_disenters_to_the_front:0 "Send Disenters to the Front"
+GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
 GER_blitzproduktion:0 "Blitzproduktion"
 GER_victory_economics:0 "Victory Economics"
