focus concesus of center

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5037,6 +5037,7 @@ ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_support_from_germany:0 "Support from Germany"
+ROM_center_consensus:0 "The consensus of the center"
 #events 
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
@@ -5151,6 +5152,7 @@ member_of_PND:0 "member of PND"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
  member_of_pnd:0  "Member of §qPND§!"
+ ROM_show_advisor:0 "§YAdvisors§! §mPNL§! and §cPC§! will be available"
 
 
 
