--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -942,7 +942,8 @@
  ROM_fascism_party_long:0 "Partidul Nationalist-Democrat"
  ROM_legionary_party:0 "Mişcarea Legionară"
  ROM_legionary_party_long:0 "Legiunea Arhanghelul Mihail"
- 
+ ROM_pcd:0 "PCD"
+ROM_pcd_long:0 "Partidul Conservator-Democrat"
  MOL_democratic_party:0 "Sfatul Tării"
  MOL_communism_party:0 "Bolsevici"
  MOL_neutrality_party:0 "Congresul Ostasilor"
