--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,8 @@
 
 
 #####romania
+ROM_re_assure_liberals:0  "Reassure The Liberals"
+ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_we_happy_few:0 "We Happy Few"
@@ -4998,7 +5000,7 @@ ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipm
 ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
-ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it."
+ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it. We shall order the police to crackdown on the disruptive protests, until the brats learn how to accept democracy."
 ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 ""
 ROM_decentralization:0 "Decentralization"
@@ -5036,8 +5038,9 @@ ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, 
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
-ROM_support_from_germany:0 "Support from Germany"
-ROM_center_consensus:0 "The consensus of the center"
+ROM_support_from_germany:0 "Krupp Weapons"
+ROM_center_consensus:0 "The Consensus of The Center"
+ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
 #events 
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
@@ -5101,9 +5104,9 @@ ww1_romania.6.b:0 "Lets try to soothe his fears, we need his support on this one
 ww1_romania.7.t:0 "The Brătianu Land Reform Bill - The Bill Passes!"
 ww1_romania.7.d:0 "While it was harder then expected, the recent land reform bill proposed to parliment has passed! King Carol as well as the general Romania populace have been worried as of late about the liberals competency in governance, and with this major bill, their fears should be soothed. While there is still progress to do, this bill is a pretty large step foward after a series of very minor reforms in the past year. "
 ww1_romania.7.a:0 "Great news for us!"
-ww1_auh.214.t:0 "Romania asks Bukovina for the alliance"
+ww1_auh.214.t:0 "Romania Requests Bukovina for Alliance"
 ww1_auh.214.a:0 "Yes, of course."
-ww1_auh.214.b:0 "ask Germany"
+ww1_auh.214.b:0 "No need"
 ww1_auh.215.t:0 "Germany asks to create a puppet in Poland"
 ww1_auh.215.a:0 "No"
 ww1_auh.215.b:0 "Yes"
@@ -5148,11 +5151,15 @@ member_of_PND:0 "member of PND"
 
  
  #custom tooltips
+ROM_the_kings_government:0 "The Kings Government"
+ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
+ROM_romanian_army_idea:0 "Romanian Army"
+modify_rom_army:0 "Modify '§YRomanian Army§!' by:\nArmy Experience Gain: §G+0.03§!"
  member_of_pc:0 "Member of §cPC§!"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
  member_of_pnd:0  "Member of §qPND§!"
- ROM_show_advisor:0 "§YAdvisors§! §mPNL§! and §cPC§! will be available"
+ ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
 
 
 
