decrease arab opposition done

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2797,6 +2797,17 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_extract_information:0 "Extract Information"
  TRS_extract_information_desc:0 "No one withstand pain for so long. If we inflict enough pain, everyone will break at a certain point."
  TRS_add_1_oppression_justification:0 "Adds §Y1§! Oppression Justification\n"
+ TRS_has_1_oppression_justification:0 "Has at least §Y1§! Oppression Justification\n"
+ TRS_remove_1_oppression_justification:0 "Removes §Y1§! Oppression Justification\n"
+ TRS_execute_traitors:0 "Execute Traitors"
+ TRS_execute_traitors_desc:0 "The state has no responsibility to feed or pay for the trip of traitors. By executing those traitors, we'll both deal a blow to the Arabist movement and set up a good example for those who're traitors to the empire."
+ TRS_exile_agitators:0 "Exile Agitators"
+ TRS_exile_agitators_desc:0 "There are large groups of opposition that are hard to imprison or execute. To minimize their effects, we can send them to remote places of the empire."
+ TUR_undermined_authority:0 "Undermined Authority"
+ TRS_imprison_opposition:0 "Imprison Opposition"
+ TRS_imprison_opposition_desc:0 "Compared to executions, imprisonment remains as a safer option. Yet whether prisoners will escape or not is not certain."
+ TRS_successful_imprisonment:0 "Set the possibility of a successful imprisonment to §Y60§!%\nSet the possibility of an unsuccessful imprisonment to §Y40§!%\n"
+ TRS_successful_imprisonment:0 "Increase the possibility of a successful imprisonment by §Y10§!%\nDecrease the possibility of an unsuccessful imprisonment by §Y10§!%\n"
  TRS_import_weapons:0 "Import Weapons"
  TRS_import_weapons_desc:0 "Our regional command is in a state of dire lack of weaponry. For that reason, we should ask more armament from the central government."
  TRS_import_artillery:0 "Import Artillery"
