--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5046,9 +5046,12 @@
 
  TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£political_advisor_cost_texticon  Political Advisor Cost: §G-25%§!\n\n"
  diplomatic_incident:0 "Diplomatic Incident"
+ TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
  TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
  TUR_frame_disloyal_elements_tt:0 "This decision will add §Y1§! Oppression Justification.\n\n"
- TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation"
+ TUR_punishment_for_traitors_tt:0 "These decisions will §Ydecrease§! Arab opposition.\n"
+ TUR_reward_and_persuasion_tt:0 "Effects when hired:\n"
+ TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation\n"
  TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
  TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
@@ -5075,9 +5078,9 @@
  TUR_increased_garrisons:0 "Increased Garrisons"
  TUR_increased_garrisons_desc:0 "While Syria is an integral inseparable part of our empire, it's far from an ideal province. To avoid getting stabbed in the back, we have to increase local garrisons and keep our backs safe."
  TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
- TUR_improve_army_command:0 "Improve Army Command"
- TUR_improve_army_command_desc:0 "Just like in the central government, our armed forces are far from a coherent modern force. As a part of the problemü our commanders and officers still remain incompetent. In order to stand a chance against our enemies, we have to modernize the command structure."
- TUR_improve_army_command_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
+ TUR_form_yildirim_army_group:0 "From Yıldırım Army Group"
+ TUR_form_yildirim_army_group_desc:0 "Ottoman 4th army command is not sufficient at fulfilling its duties. As military situation at the front worsenes due to this reason, it'd be best to dissolve Ottoman 4th army and establish Yıldırım army goup in its place."
+ TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
  TUR_appoint_kucuk_cemal:0 "Appoint Küçük Cemal"
  TUR_appoint_kucuk_cemal_desc:0 "Our regional command, though has successful commanders, still needs other military figures to carry out its operations. With that reason, we'll request the appointment of Mehmed Cemal Paşa, also known as Mersinli of Küçük Cemal Paşa to the 4th Ottoman Army in the region."
  TUR_appoint_kucuk_cemal_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
