dynamic modifier for romania

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5133,6 +5133,7 @@ ROM_left_wing_protesters:0 "Left Wing Protesters"
 ROM_mandated_insurance:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
+ROM_defence:0 "Romanian army"
 
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 
