--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5153,7 +5153,7 @@ member_of_PND:0 "member of PND"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
  member_of_pnd:0  "Member of §qPND§!"
- ROM_show_advisor:0 "§YAdvisors§! §mPNL§! and §cPC§! will be available"
+ROM_show_advisor:0 "§YAdvisors§! §mPNL§! , §cPC§! , §rPSDR§! and §qPND§!  will be available"
 
 
 
