--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5041,6 +5041,9 @@ ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_support_from_germany:0 "Krupp Weapons"
 ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
+ROM_lessons_from_prussian:0 "Lessons from the Prussians"
+ROM_french_russian_attache:0 "French-Russian attache"
+ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
 #events 
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
@@ -5155,6 +5158,8 @@ ROM_the_kings_government:0 "The Kings Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army:0 "Modify '§YRomanian Army§!' by:\nArmy Experience Gain: §G+0.03§!"
+ROM_army_org:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5%§!\nArmy Organisation: §G+5%§!"
+ROM_speed:0 "Modify '§YRomanian Army§!' by:\nArmy Speed: §G+5%§!"
  member_of_pc:0 "Member of §cPC§!"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
