--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5045,6 +5045,10 @@ ROM_lessons_from_prussian:0 "Lessons from the Prussians"
 ROM_french_russian_attache:0 "French-Russian attache"
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
 #events 
+ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
+ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliment has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
+ww1_romania.20.a:0 "The pro Carp faction wins!"
+ww1_romania.20.b:0 "The 'Romanian Young-Turks' win!"
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
 ww1_romania.17.t:0 "PC Majority Elected!"
