--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,12 @@
 
 
 #####romania
+ww1_romania.21.t:0 "Shutting Down the Tramcar Society"
+ww1_romania.21.d:0 "The PNL is famously corrupt, corrupt to the core. We are better safer then sorry on the issue of corruption, and thus we must be vigilant. The 'Tramcar Society' has openly supported the PNL multiple times, and there are many rumors that they have illegally embezzled money for the PNL. Thus, we shall forefully dissolve this corrupt institution."
+ww1_romania.21.a:0 "Good! We must continue actions like this"
+ROM_the_party_of_thieves:0 "The Party of Thieves"
+ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
+pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
 ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
