--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -261,7 +261,7 @@ GER_enacting_the_second_military_law:0 "Second Military Law"
 
 #War Time Tree
 GER_establish_the_general_headquarters:0 "Establish the General Headquarters"
-GER_zental_abteilung:0 "Zental Abteilung"
+GER_zental_abteilung:0 "Zentral Abteilung"
 GER_operationsabteilung:0 "Operationsabteilung"
 GER_politische_abteilung:0 "Politische Abteilung"
 GER_advance_germania:0 "Advance Germania"
@@ -281,7 +281,7 @@ GER_expanding_abteilung_iiib_powers:0 "Expand Abteilung IIIb's Powers"
 GER_short_term_mass_mobilisation:0 "Short Term Mass Mobilisation"
 GER_ensure_letters_get_home:0 "Ensure Letters get Home"
 GER_conscripting_the_poles_and_danes:0 "Conscripting the Poles and the Danes"
-GER_the_lindenburg_program:0 "The Lindenburg Program"
+GER_the_lindenburg_program:0 "The Hindenburg Program"
 GER_sending_disenters_to_the_front:0 "Send Disenters to the Front"
 GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
 GER_blitzproduktion:0 "Blitzproduktion"
