--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5050,6 +5050,7 @@ ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has h
 ROM_lessons_from_prussian:0 "Lessons from the Prussians"
 ROM_french_russian_attache:0 "French-Russian attache"
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
+ROM_minimum_wage_law:0 "Pass a minimum wage law"
 #events 
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliment has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
@@ -5146,7 +5147,7 @@ ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Po
 ROM_landlord_association:0 "Landlord Association"
 ROM_soldiers_benefits:0 "Soldier Benefits"
 ROM_left_wing_protesters:0 "Left Wing Protesters"
-ROM_mandated_insurance:0 "Mandated Insurance"
+ROM_mandated_insurance1:0 "Mandated Insurance"
 ROM_kings_influence:0 "The Political King"
 ROM_influence_of_the_church:0 "Influence of the Church"
 
