Germany naval focuses

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -36,6 +36,10 @@ GER_high_command_rivalry_general_staff_dominant:0 "General Staff Dominant"
 GER_high_command_rivalry_general_staff_dominant_desc:0 ""
 GER_subsidised_fighter_production:0 "Subsidised Fighter Production"
 GER_subsidised_fighter_production_desc:0 ""
+GER_mass_produce_v_30:0 "V-30 Mass Production"
+GER_mass_produce_v_30_desc:0 ""
+GER_tirpitzs_grand_fleet_idea:0 "Tirpitz's Grand Fleet"
+GER_tirpitzs_grand_fleet_idea_desc:0 ""
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
