--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,15 @@
 
 
 #####romania
+ww1_romania.25.t:0 "The Unholy Alliance"
+ww1_romania.25.d:0 "An unexpected ally has arrised to Carps authoritarian, conservative government: democratic socialists. Seeing Carps policies as benefiting to factory workers, these socialists have been taking to the street in counter protests in favor of Carp. While not a huge group, their support is certainly welcome."
+ww1_romania.24.t:0 "The Traitor Conservatives"
+ww1_romania.24.d:0 "Several in the conservative party, opposed to Carp, have joined the PNL protests against the government. Agreeing the Carp is a threat to democracy, they've called for Carp to resign immediantly. With the streets full of protesters, it seems our government may be coming to an end. Unless we are able to ride this storm, the king will certainly dismiss our government."
+ww1_romania.23.t:0 "Mass Protests on the Streets"
+ww1_romania.23.d:0 "With our refusal to resign, the PNL has organized mass protests against our government. Rioting has broken out in Bucharest with tens of thousands demanding the PC step down from power. With this, the King has increasingly began weighing his options. Its clear the king is increasingly seeing us as unable to govern, and if we don't fix this issue soon we see our government collapse!"
+ww1_romania.22.t:0 "High Courts Find No Wrong Doings From Tramcar Society"
+ww1_romania.22.d:0 "After a PNL law suit, the shutdown of the Tramcar Society has been repealed by Romanias high court. These courts are clearly corrupted, stacked with PNL loyalists. The PNL has, as a result of this ruling, claimed our government should resign in shame. Many anti Carp conservatives have joined the PNL's calls for Carp to resign, and talks of organizing mass protests have began."
+ww1_romania.22.a:0 "We'll shut dowm this corrupt court soon enough!"
 ww1_romania.21.t:0 "Shutting Down the Tramcar Society"
 ww1_romania.21.d:0 "The PNL is famously corrupt, corrupt to the core. We are better safer then sorry on the issue of corruption, and thus we must be vigilant. The 'Tramcar Society' has openly supported the PNL multiple times, and there are many rumors that they have illegally embezzled money for the PNL. Thus, we shall forefully dissolve this corrupt institution."
 ww1_romania.21.a:0 "Good! We must continue actions like this"
