--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,9 @@
 
 
 #####romania
+ww1_romania.26.t:0 "Mass Resignations"
+ww1_romania.26.d:0 "In protest of Carps government, many in parliment have resigned, demanding Carp do the same. They claim they cannot, in good faith, work with such a corrupt government. With this, the king has clearly lost faith in our government. Its going to take a miracle to stay in power at this point, thats for sure"
+ww1_romania.26.a:0 "They're overreacting!"
 ww1_romania.25.t:0 "The Unholy Alliance"
 ww1_romania.25.d:0 "An unexpected ally has arrised to Carps authoritarian, conservative government: democratic socialists. Seeing Carps policies as benefiting to factory workers, these socialists have been taking to the street in counter protests in favor of Carp. While not a huge group, their support is certainly welcome."
 ww1_romania.24.t:0 "The Traitor Conservatives"
@@ -5061,7 +5064,6 @@ ROM_french_russian_attache:0 "French-Russian attache"
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
 ROM_minimum_wage_law:0 "Pass a minimum wage law"
 ROM_anti_corruption_campaign:0 "Anti-corruption campaign"
-ROM_adapt_to_times:0 "Adapt to the times"
 #events 
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliment has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
@@ -5183,7 +5185,6 @@ ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army:0 "Modify '§YRomanian Army§!' by:\nArmy Experience Gain: §G+0.03§!"
 ROM_army_org:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5%§!\nArmy Organisation: §G+5%§!"
 ROM_speed:0 "Modify '§YRomanian Army§!' by:\nArmy Speed: §G+5%§!"
-ROM_all_mod:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5%§!\nArmy Organisation: §G+5%§!\nArmy Speed: §G+5%§!\nDivision Defence: §G+5%§!\nEquipment Capture Ratio Modifier: §G+5%§!"
  member_of_pc:0 "Member of §cPC§!"
  member_of_pnl:0 "Member of §mPNL§!"
  member_of_psdr:0 "Member of §rPSDR§!"
